@@ -224,7 +224,7 @@ class TestApplyInventoryDelta(TestCaseWithWorkingTree):
         wt.add(['dir', 'dir/child', 'other'],
                ['dir-id', 'child-id', 'other-id'])
         # this delta moves dir-id to dir2 and reparents 
-        # child-id wto a parent of other-id
+        # child-id to a parent of other-id
         wt.apply_inventory_delta([('dir', 'dir2', 'dir-id',
             inventory.InventoryDirectory('dir-id', 'dir2', root_id)),
             ('dir/child', 'other/child', 'child-id',
